@startuml
class com.example.work2play.AddTasks {
- DatePickerDialog datePickerDialog
- Button dateButton
+ void cancelAddTask(View)
+ void saveAddTask(View)
- String getTodaysDate()
- void initDatepicker()
- String makeDateString(int,int,int)
- String getMonthFormat(int)
+ void openDatePicker(View)
# void onCreate(Bundle)
}
class com.example.work2play.ui.main.PageViewModel {
- MutableLiveData<Integer> mIndex
- LiveData<String> mText
+ void setIndex(int)
+ LiveData<String> getText()
}
class com.example.work2play.ui.main.PlaceholderFragment {
- {static} String ARG_SECTION_NUMBER
- PageViewModel pageViewModel
+ {static} PlaceholderFragment newInstance(int)
+ void onCreate(Bundle)
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
}
class com.example.work2play.MainActivity {
~ {static} int coins
~ {static} SharedPreferences savedCoins
~ {static} TextView coinsText
+ {static} int getCoins()
+ {static} void setCoins(int)
# void onCreate(Bundle)
}
class com.example.work2play.AddRewards {
+ void cancelAddRewards(View)
+ void saveAddTask(View)
# void onCreate(Bundle)
}
class com.example.work2play.FragmentHabits {
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
}
class com.example.work2play.FragmentTasks {
~ View view
~ {static} ArrayList<String> tasks
~ {static} ListView taskList
~ {static} ArrayAdapter<String> arrayAdapterTasks
~ {static} SQLiteDatabase tasksDataBase
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
+ {static} void addTask(String,int)
}
class com.example.work2play.ui.main.SectionsPagerAdapter {
- {static} int[] TAB_TITLES
- Context mContext
+ <<Create>> SectionsPagerAdapter(Context,FragmentManager)
+ Fragment getItem(int)
+ CharSequence getPageTitle(int)
+ int getCount()
}
class com.example.work2play.FragmentRewards {
~ View view
~ {static} ArrayList<String> rewards
~ {static} ListView rewardList
~ {static} ArrayAdapter<String> arrayAdapterRewards
~ {static} SQLiteDatabase rewardsDataBase
+ View onCreateView(LayoutInflater,ViewGroup,Bundle)
+ {static} void addReward(String,int,boolean)
}


androidx.appcompat.app.AppCompatActivity <|-- com.example.work2play.AddTasks
androidx.lifecycle.ViewModel <|-- com.example.work2play.ui.main.PageViewModel
androidx.fragment.app.Fragment <|-- com.example.work2play.ui.main.PlaceholderFragment
androidx.appcompat.app.AppCompatActivity <|-- com.example.work2play.MainActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.work2play.AddRewards
androidx.fragment.app.Fragment <|-- com.example.work2play.FragmentHabits
androidx.fragment.app.Fragment <|-- com.example.work2play.FragmentTasks
androidx.fragment.app.FragmentPagerAdapter <|-- com.example.work2play.ui.main.SectionsPagerAdapter
androidx.fragment.app.Fragment <|-- com.example.work2play.FragmentRewards
@enduml